# promptablity

./: Cargo.toml
src/: dom.rs  extractor.rs  lib.rs
tests/fixtures/samples/: simple.html  test.rs
